# rinha-de-pagamento-25

./: README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
api/: Cargo.toml  Dockerfile
api/.cargo/: config.toml
api/.sqlx/: query-bbceb9de472caa2e45f746d24d1c70ab320e220bc4ccafebe0c444a792487c77.json  query-c0ecb837bf8b3b05db832a07116910f6546bd54b5b69b0c2117352b447c6902f.json  query-fc9b89f6f4a92e9b324b9e93ef2e936e01fb52a95f9302fb2db0771441324d7d.json
api/src/: main.rs  processor.rs  repository.rs
config/migrations/: 01_create_log_table.sql
